Fixing z-index problem when adding arrows

--- a/src/index.css
+++ b/src/index.css
@@ -248,6 +248,7 @@ header{
     display: flex;
     width:100%;
     height:100%;
+    z-index:-1;
 }
 .carousel .item{
     position: relative;
@@ -273,6 +274,7 @@ header{
     text-align: center;
     align-items: center;
     padding-top:10px;
+    z-index:1;
 }
 .carousel .button{
     display:inline-block;
@@ -295,6 +297,7 @@ header{
     flex-direction: row;
     width:100%;
     height:100%;
+    z-index:0;
 }
 .carousel .right-arrow-container{
     margin-left: auto;
